=====================================
Date	  : Version: Description
=====================================
2021-07-20: v3.0.6 : Bug fixes and code quality improvements.
                     Fix logo issue on email and admin order detail page.
                     Improve display of payment redirect page.
                     Remove unused files and code.                     
                     Fix order declined not updating order status.

2021-05-16: v3.0.5 : Tested on 3.0.3.7.
                     Improve clear or restore cart handling.
                     Remove iFrame option.
                     Add SnapScan to payment types.

2020-11-04: v3.0.4 : Combine iFrame and Redirect implementations.
                     Add 'Disable IPN' feature.
                     Add' Test Mode' feature.
                     Remove session in redirect callback for improved reliability.
                     Add 'Payment Types' feature.

2019-10-22: v3.0.3 : Retain checkout cart on failed transaction.
                     Test with 3.0.3.2.

2018-11-27: v3.0.2 : Include order number in reference.
                     Improve order processing workflow.
                     Handle email not set on checkout.

2018-06-29: v3.0.1 : Fix minor bug with GeoZone.
                     Fix auto install.

2017-10-18: v3.0.0 : Initial release.