@@ -1,12 +1,12 @@
 # PayWeb_OpenCart
-## PayGate OpenCart plugin v3.0.6 for OpenCart v3.0.3.7
+## PayGate OpenCart plugin v3.0.7 for OpenCart v3.0.3.7
 
 This is the PayGate PayWeb3 plugin for OpenCart. Please feel free to contact the PayGate support team at support@paygate.co.za should you require any assistance.
 
 ## Installation
 [![How To Setup PayGate PayWeb for OpenCart](https://appinlet.com/wp-content/uploads/2021/01/How-To-Setup-PayGate-PayWeb-for-OpenCart.jpg)](https://www.youtube.com/watch?v=vP457DVuhGc "How To Setup PayGate PayWeb for OpenCart")
 
-Please navigate to the [releases page](https://github.com/PayGate/PayWeb_OpenCart/releases), download the latest release (v3.0.6) and unzip. You will them be able to follow the integration guide PDF which is included in the zip.
+Please navigate to the [releases page](https://github.com/PayGate/PayWeb_OpenCart/releases), download the latest release (v3.0.7) and unzip. You will them be able to follow the integration guide PDF which is included in the zip.
 
 ## Collaboration
 
